kubernetes/echo/echo.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo
spec:
  template:
    metadata:
      labels:
        app: echo
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: echo
          ports:
            - containerPort: 9090
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:9090"]
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:9090"]
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echo
  labels:
    app: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: grpc
      port: 4000
      targetPort: 9090
