kubernetes/echo/echoproxy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoproxy
spec:
  template:
    metadata:
      labels:
        app: echoproxy
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: server
          image: echoproxy
          ports:
            - containerPort: 8080
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 10
            tcpSocket:
              port: 8080
          livenessProbe:
            initialDelaySeconds: 15
            periodSeconds: 20
            tcpSocket:
              port: 8080
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: echoproxy
  labels:
    app: echoproxy
  annotations:
    getambassador.io/config: |
      ---
      apiVersion: ambassador/v1
      kind: Mapping
      name: echoproxy_mapping
      prefix: /echo/
      rewrite: /
      method: POST
      service: echoproxy:8080
spec:
  type: ClusterIP
  selector:
    app: echoproxy
  ports:
    - name: http
      port: 8080
      targetPort: 8080
