kubernetes/echo/echoproxy-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: echoproxy
spec:
  gateways:
    - gateway
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /echo/
      rewrite:
        uri: /
      route:
        - destination:
            host: echoproxy
            port:
              number: 4001
